Fixes PDF and header z-index, default radio tab choice

--- a/css/style.scss
+++ b/css/style.scss
@@ -14,15 +14,19 @@ html, body {
     padding: 0;
     height: 100%;
     width: 100%;
+    scroll-behavior: smooth;
 }
 
 .fixed-header {
+    display: flex;
+    align-items: center;
     background-color: $background-color;
     position: fixed;
     top: 0;
+    height: 51px;
     width: 100%;
     box-shadow: 0 4px 10px $shadow-color;
-    z-index: 1;
+    z-index: 2;
 }
 
 .header {
@@ -35,7 +39,7 @@ html, body {
     padding: 0 1em;
 }
 
-h1 {
+#head-name {
     font-size: 18px;
 }
 
@@ -65,7 +69,7 @@ a:hover {
     list-style: none;
 }
 
-.home {
+#home {
     display: flex;
     background-image: url("../images/background.jpg");
     background-color: $background-color;
@@ -73,12 +77,12 @@ a:hover {
     background-size: cover;
     height: 85%;
     margin: 51px 0 0 0;
-    width: auto;
+    width: 100%;
 }
 
-.home div {
+#home div {
     align-items: center;
-    color:$background-color;
+    color: $background-color;
     display: flex;
     flex-direction: column;
     font-size: 20px;
@@ -89,13 +93,13 @@ a:hover {
     width: 100%;
 }
 
-.home strong {
+#home strong {
     font-size: 82px;
     font-weight: 700;
     margin-top: -2em;
 }
 
-.home em {
+#home em {
     font-size: 20px;
     font-weight: 200;
 }
@@ -113,8 +117,8 @@ a:hover {
 #about h2,
 #portfolio h2,
 #contact h2 {
+    padding: 1em 0 0 0;
     background-color: $background-color;
-
 }
 
 .tab-container {
@@ -172,10 +176,11 @@ a:hover {
     transition: all 0.07s;
     width: 100%;
   }
+
   .tab-label:hover {
     background-color: rgb(67, 67, 67);
-
   }
+
   .tab-content {
     display: block;
     position: absolute;
@@ -203,8 +208,9 @@ a:hover {
     transition: all 0.07s;
     z-index: 0;
   }
+
   .tab-switch:checked + label + .tab-content {
-    z-index: 0;
+    z-index: 1;
     opacity: 1;
     transition: all 0.07s;
   }
